languages/montiarc-fe/src/test/resources/automaton/invalid/UniquePorts.arc
package automaton.invalid;

component UniquePorts {
  port
    in Integer a,
    out Integer a;
  
  automaton UniquePorts {  
  	state Start;
    initial Start;

    Start -> Start;
  }
}
